# AudioEncoder

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cursor/rules/: project-context.mdc
resources/templates/: default-workflow.template.json
scripts/: tauri-dev.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: domain.rs  errors.rs  main.rs
src-tauri/src/audio_engine/: command_builder.rs  mod.rs  models.rs  service.rs
src-tauri/src/commands/: mod.rs  project_commands.rs  workflow_commands.rs
src-tauri/src/media_probe/: probe.rs
src-tauri/src/process_runner/: runner.rs
src-tauri/src/storage/: mod.rs  project_repository.rs  templates_repository.rs
src-tauri/src/validation/: validators.rs
src/components/: ToastViewport.tsx
src/features/logs/: LogsConsoleSection.tsx
src/features/project/: ImportAnalysisSection.tsx  ProjectDashboardSection.tsx
src/features/templates/: TemplatesSection.tsx  defaultTemplates.ts
src/features/workflow/: ExportSection.tsx  ProcessingSection.tsx  RenamingSection.tsx  WorkflowActionsSection.tsx  defaultProcessingTemplate.ts
src/layout/: WorkflowShell.tsx
src/shared/actions/: runAsync.ts
src/shared/api/: tauriClient.ts
src/shared/store/: appStore.ts
src/shared/types/: domain.ts  index.ts  schemas.ts
src/styles/: app.css
