[package]
name = "audio-workflow-app"
version = "0.1.0"
description = "Desktop workflow audio multipiste basé sur FFmpeg"
authors = ["AudioEncoder"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["process", "rt-multi-thread", "macros"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
